# jolang

./: .gitignore  Cargo.toml  LICENSE  Readme.md  bytecode_spec.md  grammar.pest
.github/workflows/: ci.yml
checker/: Cargo.toml
compiler/: Cargo.toml
compiler/src/: compiler_error.rs  generator.rs  lexer.rs  lib.rs  mod.rs  scope.rs  source_buffer.rs  source_reader.rs  source_span.rs
compiler/src/ast/: builder.rs  generators.rs  mod.rs
compiler/src/generator/: block.rs  mod.rs
exemple/: fibonacci.jol
jolang-cli/src/: mod.rs
jolang_extern/: Cargo.toml
jolang_extern/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
runtime/src/llvm/: mod.rs
shared/: Cargo.toml
shared/src/: externs.rs  lib.rs  object.rs
shared/src/ffi/: jolang_std.rs  mod.rs
shared/src/ir/: block.rs  instructions.rs  mod.rs  printer.rs  reader.rs  signature.rs  writer.rs
src/: check.rs  cli.rs  compile.rs  main.rs  run.rs  show.rs
src/cli/: compile.rs  mod.rs  run.rs
src/commons/: instructions.rs  mod.rs  object.rs
src/compiler/: compiler_error.rs  instructions.rs  lexer.rs  mod.rs  parser.rs  source_buffer.rs  source_file.rs  source_reader.rs  source_span.rs  text_data.rs
src/compiler/ast/: builder.rs  mod.rs
src/runtime/: externs.rs  mod.rs
