[package]
name = "jolang"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
c-enum = "0.2.3"
clap = { version = "4.5.9", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap", "clap-parse"] }
from-pest = "0.3.2"
inkwell = { version = "0.4.0", features = ["llvm17-0"] }
llvm-sys = { version = "170", features = ["prefer-static"] }
pest = "2.7.11"
pest-ast = "0.3.4"
pest_derive = "2.7.11"
