[workspace]
members = [
    "compiler",
    "shared"
]

[workspace.package]
version = "0.2.0"


[package]
name = "jolang"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.9", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap", "clap-parse"] }
jolangc = { path = "compiler" }
