[workspace]
members = [
    "compiler",
    "shared",
    "runtime"
]

[workspace.package]
version = "0.3.0-beta"


[package]
name = "jolang"
version = "0.3.0-beta"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.9", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap", "clap-parse"] }
jolang_runtime = { path = "runtime" }
jolang_shared = { path = "shared" }
jolangc = { path = "compiler" }
