[package]
name = "jolang_shared"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
c-enum = "0.2.3"
clap = { version = "4.5.9", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap", "clap-parse"] }
index_list = "0.2.13"
lazy_static = "1.5.0"
rand = "0.8.5"
semver = "1.0.23"
